# UWB-Thesis-MSME-UIUC

./: LICENSE  README.md
CAD_Models/: PDOA-NODE.SLDPRT  PDoA Fixture.SLDPRT  PDoA-Tag.SLDPRT  PDoA_Cube.SLDPRT  PDoA_WallMount.SLDPRT  PDoA_WallMount.STL  Retainer Tab.SLDPRT  RetainerTab1.SLDPRT  RetainerTab2.SLDPRT  TREK1000.SLDPRT  TREK_Tag_Array.SLDPRT  TREK_Tag_Fixture.SLDPRT  Total Station Handle Adapter.SLDPRT  Total_Station_PDoA_Array.SLDASM  UWB_Anchor_Array.SLDASM  trek1000_SurfaceMount.SLDPRT  trek1000_SurfaceMount.STL  trek1000_TripodMount.SLDPRT  trek1000_TripodMount.stl  trek1000_TripodMount_5-8inchBolt.SLDPRT  trek1000_TripodMount_5-8inchBolt.STL  trek1000_TripodMount_6p5mm.SLDPRT  trek1000_TripodMount_6p5mm.STL  trek1000_WallMount.SLDPRT
Data+MATLAB/ECR_UWB/: ECR_VICON_UWB_110k_channel2.m  VICON_LatestCalibration.xml  xmlParseTest.m
Data+MATLAB/Outside_UWB/: 2019-11-02-18-56-29.bag  Outdoor_UWB_Analysis_Nov_2_2019.m
Data+MATLAB/PDoA/ECR_PDoA_vicon/: 2020-03-18-11-34-10.bag  2020-03-18-11-34-10_derived.bag  2020-03-18-11-46-15.bag  2020-03-18-11-46-15_derived.bag  2020-03-18-11-58-42_spins.bag  2020-05-21-09-53-56.bag  2020-05-21-11-41-31.bag  2020-05-21-12-38-30.bag  2020-06-26-12-53-26.bag  2020-08-07-17-52-45.bag  2020-08-07-19-17-08.bag  ANN_60_100n.m  ANN_60_100n_normal.m  ANN_60_10n.m  ANN_60_10n1_normal.m  ANN_60_10n2_normal.m  ANN_60_10n3_normal.m  ANN_60_150n_normal.m  ANN_60_15n.m  ANN_60_200n.m  ANN_60_20n.m  ANN_60_25n.m  ANN_60_30n.m  ANN_60_50n.m  ANN_60_50n1.m  ANN_60_50n1_normal_TEST.m  ANN_60_50n2.m  ANN_60_50n2_normal.m  ANN_60_50n3.m  ANN_60_50n3_normal.m  ANN_60_50n_normal.m  ANN_60_5n.m  ANN_60_5n_normal.eps  ANN_60_5n_normal.m  ANN_60_75n.m  ANN_75_50n1_normal.m  ANN_full_10n.m  ANN_full_50n.m  ANN_horz_500n1_normal.m  ANN_horz_60_200n1_normal.m  (+38 more)
Data+MATLAB/PDoA/ECR_PDoA_vicon/codegen/lib/myNeuralNetworkFunction/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  myNeuralNetworkFunction.cpp  myNeuralNetworkFunction.h  myNeuralNetworkFunction_initialize.cpp  myNeuralNetworkFunction_initialize.h  myNeuralNetworkFunction_rtw.mk  myNeuralNetworkFunction_terminate.h  (+4 more)
Data+MATLAB/PDoA/ECR_PDoA_vicon/nets/: ANN_60_10n1_normal_coder.m  ANN_60_10n1_normal_compiler.m  ANN_60_10n1_normal_errorHist.eps  ANN_60_10n1_normal_net.mat  ANN_60_10n1_normal_performance.eps  ANN_60_10n1_normal_regression.eps  ANN_60_10n1_normal_tr.mat  ANN_60_10n1_normal_trainState.eps  ANN_60_10n2_normal_coder.m  ANN_60_10n2_normal_compiler.m  ANN_60_10n2_normal_errorHist.eps  ANN_60_10n2_normal_net.mat  ANN_60_10n2_normal_performance.eps  ANN_60_10n2_normal_regression.eps  ANN_60_10n2_normal_tr.mat  ANN_60_10n2_normal_trainState.eps  ANN_60_10n3_normal_coder.m  ANN_60_10n3_normal_compiler.m  ANN_60_10n3_normal_errorHist.eps  ANN_60_10n3_normal_net.mat  ANN_60_10n3_normal_performance.eps  ANN_60_10n3_normal_regression.eps  ANN_60_10n3_normal_tr.mat  ANN_60_10n3_normal_trainState.eps  ANN_60_50n1_normal_TEST_coder.m  ANN_60_50n1_normal_TEST_compiler.m  ANN_60_50n1_normal_TEST_errorHist.eps  ANN_60_50n1_normal_TEST_net.mat  ANN_60_50n1_normal_TEST_performance.eps  ANN_60_50n1_normal_TEST_regression.eps  ANN_60_50n1_normal_TEST_tr.mat  ANN_60_50n1_normal_TEST_trainState.eps  ANN_60_50n1_normal_coder.m  ANN_60_50n1_normal_compiler.m  ANN_60_50n1_normal_errorHist.eps  ANN_60_50n1_normal_net.mat  ANN_60_50n1_normal_performance.eps  ANN_60_50n1_normal_regression.eps  ANN_60_50n1_normal_tr.mat  ANN_60_50n1_normal_trainState.eps  (+78 more)
Data+MATLAB/PDoA/ECR_PDoA_wall_experiment/: PDoA_Data_Compiled_11-13-2019.xlsx  PDoA_ECR.m
Data+MATLAB/PDoA/Tent_PDoA_vicon/: 2021-03-05-20-37-20.bag  2021-03-05-21-14-47.bag  ANN_60_50n1_normal.m  Tent_ModelVerification.m  Tent_ModelVerification_data.mat  z_tent_segmenting.m
Data+MATLAB/SX10_Data/Outside/: 2021-01-29-15-51-40.bag  2021-01-29-16-25-14.bag  TrimbleSX10_Outside_1.m  TrimbleSX10_Outside_2.m
Data+MATLAB/SX10_Data/Tent_by_hand/: 2021-01-28-15-50-56.bag  2021-01-28-16-41-29.bag  TrimbleSX10_Test_1.m  TrimbleSX10_Test_2.m
Data+MATLAB/SX10_Data/Tent_data_vs_UWB/: 2021-01-29-20-32-25.bag  2021-01-29-20-33-40-Derivative.bag  2021-01-29-20-33-40.bag  2021-01-29-21-04-09-Derivative.bag  2021-01-29-21-04-09.bag  UWBpoint_vs_SX10.m  UWBpose_vs_SX10.m
Data+MATLAB/Tent_UWB+SX10+VICON_Data/: LatestSetOrigin.xcp  UWBpoint_and_SX10_vs_VICON_dynamic.m  UWBpoint_and_SX10_vs_VICON_dynamic.mat  UWBpose_and_SX10_vs_VICON_dynamic_0.m  UWBpose_and_SX10_vs_VICON_dynamic_1.m  UWBpose_and_SX10_vs_VICON_dynamic_1.mat  UWBpose_and_SX10_vs_VICON_static_1.m  UWBpose_and_SX10_vs_VICON_static_UWBpoint.m  ViconCameraPoses.xlsx
Data+MATLAB/Wiser/: README.txt  Wiser_vs_Optitrack_8-08-2018.xlsx  wiserData.bat  wiserData.py
ROS/decawave/: 60-decawave.rules  99-decawave.rules  CMakeLists.txt  package.xml
ROS/decawave/config/: anchorPos.txt  anchorPos_CERL_AMP_Lab.txt  anchorPos_CERL_ECR.txt  anchorPos_CERL_ECR_OutsideConvexHull.txt  anchorPos_CERL_OutdoorTest.txt  anchorPos_CERL_Robot_Lab.txt  anchorPos_CERL_Robot_Lab_NEW.txt
ROS/decawave/include/: decaSerial.h  pdoaSerial.h  tdoa.h  trilateration.h
ROS/decawave/launch/: decaLocate.launch  decaOrient.launch  decaSerial.launch  filter_UWBpoint_2_SX10.launch  filter_UWBpoint_2_vicon.launch  filter_UWBpose_2_SX10.launch  filter_UWBpose_2_vicon.launch  pdoaSerial.launch  pdoa_Locator.launch  pdoa_filter_Locator2vicon.launch  pdoa_filter_data2vicon.launch  uwb.launch  z_OLD_decawave.launch
ROS/decawave/msg/: pdoa_report.msg  pdoa_vicon.msg  trek1000_report.msg
ROS/decawave/src/: UWBpoint_SX10_approxTimeFilter.cpp  UWBpoint_vicon_approxTimeFilter.cpp  UWBpose_SX10_approxTimeFilter.cpp  UWBpose_vicon_approxTimeFilter.cpp  decaLocate.cpp  decaOrient.cpp  decaSerial.cpp  trilateration.cpp
ROS/decawave/src/pdoa/: pdoaLocate_vicon_timeFilter.cpp  pdoaLocator.cpp  pdoaSerial.cpp  pdoa_vicon_approxTimeFilter.cpp
ROS/trimble/: CMakeLists.txt  package.xml
ROS/trimble/launch/: SX10.launch  filter_SX10_2_vicon.launch
ROS/trimble/src/: SX10_driver.cpp  filter_approxTime_SX10_2_vicon.cpp
(+12 files in other folders)
